# backend/app/presentation/routes/index.js
@@ -1,6 +1,7 @@
 const express = require("express");
 const documentRoutes = require("./document_routes");
 const milestoneRoutes = require("./milestone_routes");
+const submissionRoutes = require("./submission_routes");
 const logbookRoutes = require("./logbook_routes");
 const assessmentRoutes = require("./assessment_routes");
 const nftRoutes = require("./nft_routes");
@@ -13,6 +14,7 @@ router.get("/health", (req, res) => {
 
 router.use("/documents", documentRoutes);
 router.use("/milestones", milestoneRoutes);
+router.use("/submissions", submissionRoutes);
 router.use("/logbook", logbookRoutes);
 router.use("/assessments", assessmentRoutes);
 router.use("/nft", nftRoutes);
